--- a/serveur/shard.yml
+++ b/serveur/shard.yml
@@ -1,4 +1,4 @@
-name: test-app
+name: cerbere-serveur
 version: 0.1.0
 
 dependencies:
@@ -6,5 +6,5 @@ dependencies:
     github: sdogruyol/kemal
 
 targets:
-  serveur:
-    main: src/serveur.cr
+  cerbere-serveur:
+    main: src/main.cr
