Make the project compilable to web
These changes will allow the most heavy images to be loaded outside of
QRC, whether via filesystem or HTTP. A new QML element CerbTextField is
added to show the virtual keyboard of mobile devices on click.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@ Makefile
 cerbere-serveur
 cerbere
 .qmake.stash
+*.html
+*.js*
+*.wasm
+qmake_qmake_immediate.qrc
+*.tmp
+qrc_*.cpp
+qtlogo.svg
+client/client
+moc_*.cpp
+moc_predefs.h
