--- a/serveur/shard.yml
+++ b/serveur/shard.yml
@@ -5,6 +5,9 @@ dependencies:
   kemal:
     github: sdogruyol/kemal
 
+  mysql:
+    github: crystal-lang/crystal-mysql
+
 targets:
   cerbere-serveur:
     main: src/main.cr
