Don't upload images that are already in the QRC
The archive is too big for Gitlab Pages, this commit reduce the size of
the archive by removing the images that are already in the QRC, as they
would be in double.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ pages:
                 - cd client
                 - $qmake_wasm -d
                 - make
+                - sed -n "s+<file>\(.*\)</file>+\1+p" Images.qrc | xargs rm
                 - cd ..
                 - mkdir public
                 - mv client/{client.{html,js,wasm},qtloader.js,qtlogo.svg,images} public
