--- a/serveur/shard.yml
+++ b/serveur/shard.yml
@@ -4,6 +4,12 @@ version: 0.1.0
 dependencies:
   kemal:
     github: sdogruyol/kemal
+  db:
+    github: crystal-lang/crystal-db
+    version: 0.9.0
+  mysql:
+    github: crystal-lang/crystal-mysql
+    version: 0.11.0
 
   mysql:
     github: crystal-lang/crystal-mysql
