Update server CI script to use git
Shards use git to install some packages, and it wasn't installed until
now, so it couldn't install the package by itself.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,7 +94,7 @@ verif_serveur:
         before_script:
                 - export DEBIAN_FRONTEND=noninteractive # fuck you tzdata
                 - apt-get update
-                - apt-get install --yes --force-yes curl apt-transport-https ca-certificates gnupg
+                - apt-get install --yes --force-yes curl apt-transport-https ca-certificates gnupg git
                 - curl -fsSL https://crystal-lang.org/install.sh | bash
         script:
                 - cd serveur
