Add a new CI script to check if QML is valid
This CI script will try to execute the QML and check if it is actually
valid. The verif_client script doesn't do that: it merely compiles the
files in the executable without checking if they are valid.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,3 +125,20 @@ verif_indentation:
                 - little-indentation-checker/little-indentation-checker --tab client/main.cpp client/*.qrc client/{,library/}*.qml serveur/src/*.cr
         only:
                 - merge_requests
+
+verif_qml:
+        image: archlinux
+        before_script:
+                - pacman --noconfirm -Syu
+                - pacman --noconfirm -S qt5-declarative git make gcc qt5-quickcontrols2 qt5-websockets qt5-graphicaleffects
+        script:
+                - git clone --depth=1 https://github.com/LcsTen/qml-validator.git
+                - cd qml-validator
+                - qmake && make
+                - cd ..
+                - qml-validator/qml-validator client/Application.qml
+        only:
+                refs:
+                        - merge_requests
+                changes:
+                        - client/**/*
